<resources>
    <string name="app_name">lk3</string>
    <string name="greeting">Hi, Martin</string>
    <string name="greeting_support">Are you ready for today\'s class?</string>
    <string name="sample_class">Class 8</string>
    <string name="sample_subject">Maths</string>
    <string name="sample_chapter">Square and Square Roots</string>
    <string name="sample_teacher">By: Mr. Sarman Joshi</string>
    <string name="sample_due_time">In 10:00 Min</string>
    <string name="join">Join Class</string>
    <string name="sample_members_joined">20+ Member Joined</string>
    <string name="upcoming_class">Upcoming Class</string>
    <string name="view_all">View All</string>
    <string name="sample_time">18 Sep | 2:00 PM</string>
    <string name="assignment">Assignment</string>
    <string name="sample_assignment">Assignment 1</string>
    <string name="sample_description">Rational Numbers assignment, Very important for your next exam</string>
    <string name="read_more">Read More</string>
    <string name="sample_days_left">1 Days Left</string>
</resources>