<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:paddingVertical="8dp"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_purple_corner_24"
            android:text="@string/sample_subject"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sample_chapter"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_subject"
            app:layout_constraintStart_toStartOf="@id/tv_subject" />

        <TextView
            android:id="@+id/tv_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sample_teacher"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_chapter"
            app:layout_constraintTop_toBottomOf="@id/tv_chapter" />

        <TextView
            android:id="@+id/tv_due_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_due_time"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/secondary_200"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_subject"/>

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="@color/primary_200"
            app:layout_constraintStart_toStartOf="@id/tv_teacher"
            app:layout_constraintEnd_toEndOf="@id/tv_due_time"
            app:layout_constraintTop_toBottomOf="@id/tv_teacher"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            app:cornerRadius="36dp"
            android:backgroundTint="@color/secondary_200"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/separator"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintStart_toEndOf="@id/tv_teacher"/>

        <TextView
            android:id="@+id/tv_members_joined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_members_joined"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="@id/separator"
            app:layout_constraintTop_toTopOf="@id/btn_join"
            app:layout_constraintBottom_toBottomOf="@id/btn_join"
            app:layout_constraintEnd_toStartOf="@id/btn_join"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>